scss/style.scss
/* ... */
.wrapper {
    overflow-x: hidden;
    min-height: 100vh;
    display: flex;
    align-items: stretch;
    flex-direction: column;
}

.wrapper > .main {
    flex-grow: 1;
    padding: $spacer 0;
}

.bg404 {
    position: absolute;
    z-index: -1;
    opacity: 0.25;
    font-size: 40vw;
    line-height: 1;
}

@include media-breakpoint-up(lg) {
    .bg404 {
        font-size: 20rem;
    }
}

.fullWidth {
    width: 100vw;
    position: relative;
    left: 50%;
    right: 50%;
    margin-left: -50vw;
    margin-right: -50vw;
}

.breadcrumbs {
    margin-bottom: map-get($spacers, 3);
    background: $light;
    border-radius: $border-radius;
    padding-top: map-get($spacers, 2);
    padding-bottom: map-get($spacers, 2);
    padding-left: map-get($spacers, 1);
    padding-right: map-get($spacers, 1);
    color: $text-muted;
}

.breadcrumbs .breadcrumb {
    display: inline-block;
    margin-bottom: 0;
}

.breadcrumbs .breadcrumb a {
    color: $text-muted;
}

.breadcrumbs .breadcrumb.current {
    font-weight: bold;
    color: $dark;
}

/* HEADER */

.sticky {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    z-index: 1000;
}

.siteTitle {
    color: $light !important;
    text-decoration: none;
}

.siteTitle > .siteName {
    margin-bottom: 0;
}

#pageHeader .siteLogo {
    max-width: 300px;
    transition: max-width 0.35s ease;
}

#pageHeader .contact a {
    text-decoration: none;
}

#pageHeader.sticky .siteLogo {
    max-width: 150px;
}

#pageHeader.sticky .contact {
    display: none !important;
}

/* NAVIGATION */

#navbar0 {
    position: relative;
}

#navbarCollapse0 > .navbar-nav {
    flex-wrap: wrap;
    justify-content: flex-end;
}

li.dropdown {
    position: relative;
}

@include media-breakpoint-up(xl) {
    li.dropdown:hover > .subMenu {
        display: block;
        width: 320px !important;
    }
    
    li.dropdown:not(:hover) > .dropdown-toggle:after {
        transform: rotate(90deg);
    }
    
    #navbar0 .navbar-nav:not(.subMenu) > li.nav-item {
        margin-left: $spacer * .75;
        text-align: center;
        display: flex;
        align-items: center;
        justify-content: center;
    }
    
    #navbar0 .navbar-nav:not(.subMenu) > li.nav-item:first-child {
        margin-left: 0;
    }
}

li.nav-item > .dropdown-toggle:after {
    transition: transform 0.35s ease;
}

.navbar .subMenu {
    display: none;
    position: absolute;
    top: 100%;
    right: 0;
    width: 320px;
    background: shade-color($secondary, 5);
    z-index: 1001;
}

.subMenu .nav-link {
    padding-left: $spacer !important;
    padding-right: $spacer !important;
}

.subMenu .dropdown-toggle {
    background-color: shade-color($secondary, 10);
}

@include media-breakpoint-down(xl) {
    #navbar0 > .navbar-collapse {
        position: absolute;
        top: calc(100% + #{$spacer});
        right: calc(var(--bs-gutter-x) / -2);
        width: 100%;
        max-width: 320px;
        background-color: $secondary;
        z-index: 100000;
    }
    
    #navbar0 .dropdown-toggle {
        background-color: shade-color($secondary, 10);
        padding-left: $spacer;
        padding-right: $spacer;
    }
    
    .navbar .subMenu {
        position: static;
    }
    
    li.nav-item:not(.exp) > .dropdown-toggle:after {
        transform: rotate(90deg);
    }
    
    li.dropdown.exp > .subMenu {
        display: block;
    }
}

.verticalnav .nav .nav {
    padding-left: $spacer;
}

#pageFooter .verticalnav .nav-link {
    color: $white;
    padding: 0;
}

#pageFooter .verticalnav .nav-link:hover,
#pageFooter .verticalnav .nav-link:active {
    text-decoration: underline;
}

/* FOOTER */

#pageFooter address {
    margin-bottom: 0;
}

#pageFooter .contact a {
    text-decoration: none;
}

#pageFooter .socials .social {
    font-size: 2rem;
    margin-right: $spacer;
}

#pageFooter .socials .social a {
    transition: color 0.15s ease;
}

.social#facebook a {
    color: #1877f2;
}

.social#facebook a:hover,
.social#facebook a:active {
    color: shade-color(#1877f2, 20);
}

.social#twitter a {
    color: #1da1f2;
}

.social#twitter a:hover,
.social#twitter a:active {
    color: shade-color(#1da1f2, 20);
}

.social#youtube a {
    color: #ff0000;
}

.social#youtube a:hover,
.social#youtube a:active {
    color: shade-color(#ff0000, 20);
}

.social#linkedin a {
    color: #2867b2;
}

.social#linkedin a:hover,
.social#linkedin a:active {
    color: shade-color(#2867b2, 20);
}

.social#instagram a {
    color: #673eb8;
}

.social#instagram a:hover,
.social#instagram a:active {
    color: shade-color(#673eb8, 20);
}

/* MAIN */

.uc.content img {
    max-width: 100%;
    height: auto;
}

.carousel-inner {
    position: relative;
    overflow: hidden;
    min-height: 50vh;
}

.carousel-inner:after {
    content: "";
    display: inline-block;
    padding-top: 40%;
}

.carousel-inner > .carousel-item {
    position: absolute;
    height: 100%;
    width: 100%;
    padding: $spacer;
}

.carousel-item-inner {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
    margin: auto;
    padding-left: map-get($spacers, 2);
    padding-right: map-get($spacers, 2);
}

.carousel-item img.background {
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 0;
}

.carousel-item .carouselTitle,
.carousel-item .carouselTagline {
    color: $white;
    text-shadow: 1px 1px 10px $dark;
    text-align: center;
    position: relative;
    z-index: 1;
}

.carousel-item input.carouselTitle,
.carousel-item input.carouselTagline {
    background: transparent;
    border: 0;
    width: 100%;
    color: $white;
}

.carousel-item input.carouselTitle::placeholder,
.carousel-item input.carouselTagline::placeholder {
    color: $white
}

.postsList {
    align-items: stretch;
}
/* ... */

